--- a/web-bikecraft/css/responsivo.css
+++ b/web-bikecraft/css/responsivo.css
@@ -161,4 +161,11 @@
 	padding-right: 0px;
 }
 
+/*Contato*/
+
+.contato_form {
+	padding-right: 0px;
+	margin-bottom: 40px;
+}
+
 } /* Final do estilo para smartphone */
